GAMBAR, perubahan artikel6

--- a/artikel 6/artikel-6.html
+++ b/artikel 6/artikel-6.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="artikel-6.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <title>Nuzulul Qur'an</title>
+    <title>Artificial Inteligence-Pengertian, </title>
 </head>
 <body>
     <nav>
@@ -28,5 +28,7 @@
             <label for="check" class="mobile-menu"><i class="fas fa-bars fa-2x"></i></label>
         </div>
     </header>
+    <h1>Apa itu Artificial Inteligent</h1>
+    <img src="./gambar16.jpeg" alt="ai" width="50%" height="50%"/>
 </body>
 </html>
