--- a/index.html
+++ b/index.html
@@ -26,32 +26,32 @@
                 <tr>
                     <td>1</td>
                     <td>Framework PHP</td>
-                    <td><a href="artikel-1.html" target="_blank">Artikel 1</a></td>
+                    <td><a href="./artikel 1/artikel-1.html" target="_blank">Artikel 1</a></td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>Bullying</td>
-                    <td><a href="artikel-2.html" target="_blank">Artikel 2</a></td>
+                    <td><a href="./artikel 2/artikel-2.html" target="_blank">Artikel 2</a></td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>Puasa</td>
-                    <td><a href="artikel-3.html" target="_blank">Artikel 3</a></td>
+                    <td><a href="./artikel 3/artikel-3.html" target="_blank">Artikel 3</a></td>
                 </tr>
                 <tr>
                     <td>4</td>
                     <td>Puasa Ramadhan</td>
-                    <td><a href="artikel-4.html" target="_blank">Artikel 4</a></td>
+                    <td><a href="./artikel 4/artikel-4.html" target="_blank">Artikel 4</a></td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td>Puasa Asyura</td>
-                    <td><a href="artikel-5.html" target="_blank">Artikel 5</a></td>
+                    <td><a href="./artikel 5/artikel-5.html" target="_blank">Artikel 5</a></td>
                 </tr>
                 <tr>
                     <td>6</td>
                     <td>Puasa Asyura</td>
-                    <td><a href="artikel-6.html" target="_blank">Artikel 6</a></td>
+                    <td><a href="./artikel 6/artikel-6.html" target="_blank">Artikel 6</a></td>
                 </tr>
             </tbody>
         </table>
